--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 ext {
     guavaVersion = '11.0.2'
+    springWebFluxVersion = '5.2.9.RELEASE'
+    springNettyVersion = '2.3.2.RELEASE'
 }
 
 group = 'com.pwoj'
@@ -26,8 +28,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation "org.springframework:spring-webflux:${springWebFluxVersion}"
 
     compile "com.google.guava:guava:${guavaVersion}"
+    compile "org.springframework.boot:spring-boot-starter-reactor-netty:${springNettyVersion}"
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
