--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,18 @@
 plugins {
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id "org.asciidoctor.convert" version "2.4.0"
     id 'java'
+    id 'groovy'
 }
 
 ext {
     guavaVersion = '11.0.2'
     springWebFluxVersion = '5.2.9.RELEASE'
     springNettyVersion = '2.3.2.RELEASE'
+    springRestDocsVersion = '2.0.4.RELEASE'
+    groovyVersion = '2.5.10'
+    spockVersion = '1.3-groovy-2.5'
 }
 
 group = 'com.pwoj'
@@ -23,12 +28,18 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.annotationProcessorPath = configurations.annotationProcessor
+}
+
 dependencies {
+    asciidoctor "org.springframework.restdocs:spring-restdocs-asciidoctor:${springRestDocsVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.springframework:spring-webflux:${springWebFluxVersion}"
+    implementation "org.codehaus.groovy:groovy-all:${groovyVersion}"
 
     compile "com.google.guava:guava:${guavaVersion}"
     compile "org.springframework.boot:spring-boot-starter-reactor-netty:${springNettyVersion}"
@@ -37,11 +48,12 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testCompile "org.spockframework:spock-core:${spockVersion}"
+    testCompile "org.spockframework:spock-spring:${spockVersion}"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile "org.springframework.restdocs:spring-restdocs-mockmvc:${springRestDocsVersion}"
 }
 
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
